<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_shopping_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.ezequielc.moviesforsale.ShoppingCartActivity">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shopping Cart"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:layout_centerHorizontal="true"/>

        <android.support.v7.widget.RecyclerView
            android:layout_below="@id/header"
            android:id="@+id/shopping_cart_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/display_total"
                android:layout_below="@id/shopping_cart_recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textStyle="bold"
                android:textSize="16sp"/>

        <Button
            android:id="@+id/checkout_button"
            android:layout_below="@id/display_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Checkout"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>