<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="Search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/shopping_cart"
        android:title="Shopping Cart"
        android:icon="@drawable/ic_local_grocery_store_black_24dp"
        app:showAsAction="always"/>
</menu>