<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <TextView
            android:id="@+id/shopping_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remove" />
    </LinearLayout>
</LinearLayout>